{
  "sourceLanguage": "en",
  "strings": {
    "Lists": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Lister"
          }
        }
      }
    },
    "Activity": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Aktivitet"
          }
        }
      }
    },
    "Profile": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Profil"
          }
        }
      }
    },
    "My Lists": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Mine lister"
          }
        }
      }
    },
    "List name": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Listenavn"
          }
...
            "state": "translated",
            "value": "Annuller"
          }
        }
      }
    },
    "Create": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Opret"
          }
...
            "state": "translated",
            "value": "Tryk + for at oprette din første indkøbsliste"
          }
        }
      }
    },
    "Add items...": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Tilføj varer..."
          }
...
            "state": "translated",
            "value": "Forlad liste"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Færdig"
          }
...
            "state": "translated",
            "value": "Hold familiens indkøb synkroniseret"
          }
        }
      }
    },
    "Sign in with test account": {
      "localizations": {
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Log ind med testkonto"
          }
...
